# Weekend-Planner

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  GITHUB_PAGES_SETUP.md  GITHUB_PAGES_STATUS.md  IMPLEMENTATION_SUMMARY.md  LIVE_DEPLOYMENT_SUMMARY.md  Makefile  README.md  ROADMAP_FEATURES.md  pyproject.toml
app/: __init__.py  alt_server.py  main.py  server.py  yaml.py
app/config/: __init__.py  settings.example.yaml  settings.yaml
app/connectors/: __init__.py  dining.py  fx.py  ticket_vendor_a.py  ticket_vendor_b.py  travel.py  weather.py
app/data/: dining.json  vendor_a.json  vendor_b.json
app/models/price_drop/: features.py  train.py
app/normalizers/: price.py
app/policies/: buy_now.py
app/ranking/: scorer.py
app/services/: __init__.py  planner.py
app/tests/: test_async_connectors.py  test_buy_now.py  test_cache.py  test_fx_fallback.py  test_landed_cost.py  test_metrics.py  test_offline_mode.py  test_price_edges.py  test_profile.py  test_scorer.py  test_scoring_penalties.py  test_server_metrics.py  test_server_share.py  test_share.py  test_travel.py  test_weather.py
app/ui/copy/: templates.py
app/utils/: cache.py  http.py  logging.py  metrics.py  profile.py  share.py
docs/: app.html  index.html
weekend_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
