[project]
name = "weekend-planner"
version = "0.1.0"
description = "Weekend planner service"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
