[project]
name = "weekend-planner"
version = "0.1.0"
description = "Weekend planner service"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "anyio>=4.4.0",
  "pydantic>=2.9.0",
  "python-dateutil>=2.9.0",
  "pytz>=2024.1",
  "numpy>=2.1.1",
  "pandas>=2.2.2",
  "lightgbm>=4.5.0",
  "scikit-learn>=1.5.2",
  "pyyaml>=6.0.2",
  "joblib>=1.4.2",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pytest>=8.3.2"
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.3.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["app"]
